[package]
name = "freedom-models"
version = "2.4.0"
edition = "2024"
authors = ["Caleb Leinz <caleb.leinz@atlasspace.com>"]
description = "Models for the Freedom API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ATLAS-Space-Operations/rust-freedom-models"

[dependencies]
ipnet = { version = "2.11.0" }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = { version = "1.0.56" }
time = { version = "0.3.36", features = ["serde-human-readable", "macros"] }
url = { version = "2.5.0" }

# Optional dependencies
serde = { version = "1.0.195", features = ["derive"], optional = true }
serde_with = { version = "3.3.0", optional = true }

[dev-dependencies]
serde_json = { version = "1.0.111" }

[features]
serde = ["dep:serde", "dep:serde_with", "url/serde", "ipnet/json"]
